Fix for FAQ and FAQ styling

--- a/html/css/style.less
+++ b/html/css/style.less
@@ -1506,9 +1506,9 @@ div#explain_panel {
       p {
         margin-top: 3px;
         margin-bottom: 7px;
-        font-family: Verdana, arial;
+        font-family: CentraleSans;
         font-size: 12px;
-        color: #adabab;
+        color: @grey-medium;
       }
     }
   }
