--- a/html/scss/panels/map_tools.scss
+++ b/html/scss/panels/map_tools.scss
@@ -1,8 +1,13 @@
 .map_tools {
 	width: 100%;
 	height: 100%;
+	display: none;
     position: absolute;
 	opacity: 1;
+
+	@media #{$medium-up} {
+		display: block;
+	}
 
 	.container {
 		display: flex;
