--- a/html/scss/panels/region_info.scss
+++ b/html/scss/panels/region_info.scss
@@ -1,9 +1,18 @@
-.region_info {
+.region_info,
+.region_info_wrapper {
 	color: #3A707A;
 	width: 100%;
 	height: 100%;
 	opacity: 0;
     position: absolute;
+
+	&_wrapper {
+		padding-top: 10px;
+
+		@media #{$medium-up} {
+			padding-top: 0;
+		}
+	}
 
 	.container {
 		opacity: 0;
@@ -29,6 +38,12 @@
 		background: #3A707A;
 		color: #fff;
 		cursor: pointer;
+		display: none;
+
+		@media #{$medium-up} {
+			display: block;
+
+		}
 
 		&:after, &:before {
 		    position: absolute;
@@ -59,19 +74,27 @@
 			color: #fff;
 			font-weight: 700;
 		}
-		&:last-of-type {
-			border: 0;
+		@media #{$medium-up} {
+			&:last-of-type {
+				border: 0;
+			}
 		}
 	}
 	&_left {
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		width: grid-size(4);
+		@media #{$medium-up} {
+			width: grid-size(4);
+		}
 
 		h2 {
 			margin: 0;
 			font-size: 34px;
+			display: none;
+			@media #{$medium-up} {
+				display: block;
+			}
 		}
 
 	}
@@ -79,20 +102,22 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		width: grid-size(7);
-		margin-left: grid-size(0);
-		margin-right: grid-size(1.2);
-
-		.sustainability &,
-		.global_presence & {
-			background-image: url('../img/sustainability_bg.png');
-			background-repeat: no-repeat;
-			background-position: left -10px;
+		@media #{$medium-up} {
+			width: grid-size(7);
+			margin-left: grid-size(0);
+			margin-right: grid-size(1.2);
+			.sustainability &,
+			.global_presence & {
+				background-image: url('../img/sustainability_bg.png');
+				background-repeat: no-repeat;
+				background-position: left -10px;
+			}
 		}
-
-		.data-wrapper {
-			width: grid-size(9, false);
-			align-self: flex-end;
+		@media #{$medium-up} {
+			.data-wrapper {
+				width: grid-size(9, false);
+				align-self: flex-end;
+			}
 		}
 
 		&_header {
@@ -100,22 +125,35 @@
 		}
 
 		.nr_lives_improved_label {
-			font-size: 34px;
+			line-height: 34px;
+			@media #{$medium-up} {
+				font-size: 34px;
+			}
 		}
 		.nr_lives_improved {
 			float: right;
-			font-size: 34px;
 			color: #fff;
 			font-weight: 700;
+			line-height: 34px;
+			@media #{$medium-up} {
+				font-size: 34px;
+			}
 		}
 		.lives_improved_wrapper	{
-
+			padding-top: 15px;
+			@media #{$medium-up} {
+				padding-top: 0;
+			}
 		}
 		.lives_improved_percentage {
-			font-size: 86px;
-			line-height: 86px;
+			font-size: 50px;
+			line-height: 50px;
 			color: $color-highlight;
 			font-weight: 800;
+			@media #{$medium-up} {
+				font-size: 86px;
+				line-height: 86px;
+			}
 		}
 		.lives_improved_percentage_sub {
 			color: $color-highlight;
@@ -139,8 +177,12 @@
 			align-self: flex-end;
 
 			img {
-				height: 22px;
+				height: 18px;
 				margin-left: 2px;
+
+				@media #{$medium-up} {
+					height: 22px;
+				}
 			}
 		}
 	}
