--- a/html/css/style.css
+++ b/html/css/style.css
@@ -133,7 +133,7 @@
   width: 100%;
   height: 100%;
   opacity: 0;
-  position: absolute; }
+  position: relative; }
   .region_info_wrapper,
   .region_info_wrapper_wrapper {
     padding-top: 10px; }
@@ -324,8 +324,8 @@
   width: 100%;
   height: 100%;
   display: none;
-  position: absolute;
-  opacity: 1; }
+  opacity: 1;
+  position: absolute; }
   @media only screen and (min-width: 769px) {
     .map_tools {
       display: block; } }
@@ -466,11 +466,6 @@
             border: 0; }
 
 body {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
   overflow: hidden;
   font-family: CentraleSans;
   font-size: 100%;
@@ -491,35 +486,24 @@ body {
     display: block;
     top: 0%;
     width: 100%; }
-    @media only screen and (min-width: 769px) {
-      #app_panel #app_wrapper .map-tab_panels {
-        height: 10%;
-        position: absolute; } }
   #app_panel #app_wrapper #oru_filter_container {
     display: block;
     top: 10%;
     width: 100%; }
-    @media only screen and (min-width: 769px) {
-      #app_panel #app_wrapper #oru_filter_container {
-        position: absolute;
-        height: 5%; } }
     #app_panel #app_wrapper #oru_filter_container select {
       padding: .5em 1em;
       width: 150px; }
-      @media only screen and (min-width: 769px) {
-        #app_panel #app_wrapper #oru_filter_container select {
-          position: absolute;
-          bottom: 0; } }
   #app_panel #app_wrapper #map {
     top: 18%;
-    height: calc(100% - 18% - 250px);
+    min-height: 400px;
     width: 100%;
-    position: absolute;
-    opacity: 0; }
+    display: none; }
     @media only screen and (min-width: 769px) {
       #app_panel #app_wrapper #map {
         height: calc(100% - 18% - 250px);
-        width: 100%; } }
+        width: 100%;
+        display: block;
+        opacity: 1; } }
     #app_panel #app_wrapper #map svg * {
       fill: #7CC9C5;
       transition: fill .5s ease;
@@ -559,12 +543,11 @@ body {
   #app_panel #app_wrapper #bottom_panel {
     display: block;
     bottom: 0;
-    width: 100%; }
+    width: 100%;
+    position: relative; }
     @media only screen and (min-width: 769px) {
       #app_panel #app_wrapper #bottom_panel {
-        height: 250px;
-        top: calc(100% - 200px);
-        position: absolute; } }
+        height: 250px; } }
   #app_panel #app_wrapper #slider_indicator,
   #app_panel #app_wrapper #show_simulation,
   #app_panel #app_wrapper #show_current {
